test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/275Final/275Final/node_modules/react-markdown/index.js:10
    export {
    ^^^^^^

    SyntaxError: Unexpected token 'export'

      3 | import "./DetailedAssessment.css";
      4 | import { chat } from "../chat";
    > 5 | import ReactMarkdown from 'react-markdown';
        | ^
      6 | import { useEffect } from "react";
      7 |
      8 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/components/DetailedAssessment.tsx:5:1)
      at Object.<anonymous> (src/App.tsx:2:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)
      at TestScheduler.scheduleTests (node_modules/@jest/core/build/TestScheduler.js:333:13)
      at runJest (node_modules/@jest/core/build/runJest.js:404:19)
      at _run10000 (node_modules/@jest/core/build/cli/index.js:320:7)
      at runCLI (node_modules/@jest/core/build/cli/index.js:173:3)

-------------------------|---------|----------|---------|---------|-------------------
File                     | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
-------------------------|---------|----------|---------|---------|-------------------
All files                |       0 |        0 |       0 |       0 |                   
 src                     |       0 |        0 |       0 |       0 |                   
  App.tsx                |       0 |        0 |       0 |       0 | 12-42             
  chat.tsx               |       0 |        0 |       0 |       0 | 3-83              
  index.tsx              |       0 |      100 |     100 |       0 | 8-22              
  reportWebVitals.ts     |       0 |        0 |       0 |       0 | 3-10              
 src/components          |       0 |        0 |       0 |       0 |                   
  BasicAssessment.tsx    |       0 |        0 |       0 |       0 | 8-176             
  DetailedAssessment.tsx |       0 |        0 |       0 |       0 | 9-181             
  ProgressBar.tsx        |       0 |      100 |       0 |       0 | 9-11              
 src/interfaces          |       0 |        0 |       0 |       0 |                   
  question.ts            |       0 |        0 |       0 |       0 |                   
-------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        3.251 s
Ran all test suites.
